--- a/src/style.css
+++ b/src/style.css
@@ -75,7 +75,29 @@ header {
     font-size: 44px;
     margin-top: 22px;
  }
- weather-app-unit {
+ .weather-app-unit {
     margin-top: 16px;
     font-size: 28px;
  }
+ .weather-forecast-date {
+   text-align: center;
+   color: rgba(39, 33, 66, 0.4);
+   font-size: 16px;
+   line-height: 20px;
+   margin-bottom: 10px;
+
+ }
+ .weather-forecast-icon {
+  font-size: 38px;
+  text-align: center;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+  color: #f65282;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+.weather-forecast-temperature {
+  padding: 0 10px;
+}
